--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "recharts": "^3.5.1",
     "jspdf": "2.5.1",
     "jspdf-autotable": "3.8.2",
-    "jszip": "3.10.1"
+    "html2canvas": "1.4.1",
+    "jszip": "3.10.1",
+    "pdfjs-dist": "3.11.174"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
