--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
 {
   "name": "emp-hr-portal-backend",
   "version": "1.0.0",
-  "description": "Node.js backend for EMP HR Portal",
+  "description": "Node.js backend for EMP HR Portal with SQL Server",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -11,6 +11,6 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.7"
+    "mssql": "^10.0.1"
   }
 }
