--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
     "@google/genai": "^1.33.0",
-    "lucide-react": "^0.560.0",
-    "recharts": "^3.5.1",
-    "jspdf": "2.5.1",
-    "jspdf-autotable": "3.8.2",
-    "html2canvas": "1.4.1",
-    "jszip": "3.10.1",
-    "pdfjs-dist": "3.11.174"
+    "react": "^19.2.3",
+    "lucide-react": "^0.561.0",
+    "recharts": "^3.6.0",
+    "jszip": "^3.10.1",
+    "pdfjs-dist": "^5.4.449",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "react-dom": "^19.2.3",
+    "jspdf-autotable": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
