--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vite": "^7.3.0",
     "@vitejs/plugin-react": "^5.1.2",
     "react-dom": "^19.2.3",
-    "jspdf-autotable": "^5.0.2"
+    "jspdf-autotable": "^5.0.2",
+    "@azure/msal-browser": "3.10.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
