--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^3.10.0",
     "@google/genai": "^1.33.0",
-    "react": "^19.2.3",
-    "lucide-react": "^0.561.0",
-    "recharts": "^3.6.0",
-    "jszip": "^3.10.1",
-    "pdfjs-dist": "^5.4.449",
+    "@vitejs/plugin-react": "^5.1.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
-    "vite": "^7.3.0",
-    "@vitejs/plugin-react": "^5.1.2",
-    "react-dom": "^19.2.3",
     "jspdf-autotable": "^5.0.2",
-    "@azure/msal-browser": "3.10.0"
+    "jszip": "^3.10.1",
+    "lucide-react": "^0.561.0",
+    "pdfjs-dist": "^5.4.449",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "recharts": "^3.6.0",
+    "vite": "^7.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
