--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # API Configuration
 # Set to 'false' to use the Real Node.js Backend
-VITE_USE_MOCK_DATA=true 
+VITE_USE_MOCK_DATA=false 
 VITE_API_BASE_URL=http://localhost:8000/api
 
 # Gemini AI Key
