--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@vitejs/plugin-react": "^5.1.2",
     "react-dom": "^19.2.3",
     "jspdf-autotable": "^5.0.2",
-    "@azure/msal-browser": "3.10.0"
+    "@azure/msal-browser": "3.10.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
