--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.2.3",
     "jspdf-autotable": "^5.0.2",
     "@azure/msal-browser": "3.10.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "esri-loader": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
