--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "emp-hr-portal-backend",
   "version": "1.0.0",
@@ -13,6 +12,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mssql": "^10.0.1",
-    "nodemailer": "^6.9.9"
+    "nodemailer": "^6.9.9",
+    "node-cron": "^3.0.3"
   }
 }
